More changes with new layout

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <script>
+    if (localStorage.getItem('theme') === 'dark') {
+      document.documentElement.classList.add('dark');
+    }
+  </script>
 </head>
-<body>
+<body class="bg-white dark:bg-gray-900 text-black dark:text-white">
   <app-root></app-root>
 </body>
 </html>
